--- a/potato.css
+++ b/potato.css
@@ -22,6 +22,10 @@ h1 {
   top: 28px; left: 68px; 
 }
 /* Insert CSS for arms below this line*/
+#arms_image{
+  top:170px;
+  right:30px;
+}
 
 
 
@@ -42,7 +46,10 @@ h1 {
 
 
 /* Insert CSS for nose below this line*/
-
+#nose_image{
+ top: 110px; 
+ right:140px;
+}
 
 
 
