--- a/potato.css
+++ b/potato.css
@@ -19,11 +19,10 @@ h1 {
 
 /* Insert CSS for body below this line*/
 #body { 
-  top: 28px; left: 68px; 
+  top: 28px; 
+  left: 68px;
 }
 /* Insert CSS for arms below this line*/
-
-
 
 
 /* Insert CSS for ears below this line*/
@@ -48,7 +47,8 @@ h1 {
 
 /* Insert CSS for eyebrows below this line*/
 #eyebrows_image{
-  top: 60px; right:122px;
+  top: 80px; 
+  left: 110px;
 }
 
 
@@ -70,7 +70,8 @@ h1 {
 
 /* Insert CSS for moustache below this line*/
 #moustache_image{
-  bottom:255px; right:90px
+  top: 170px; 
+  left: 90px;
 }
 
 
